/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package exec;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "CoordinationProtos";
option optimize_for = SPEED;

//
// Content of this file is used for interoperability with Apache Drill
//
// Please ensure that structures stay backward compatible
//
message NodeEndpoint {
  optional string address = 1;
  optional int32 user_port = 2;
  optional int32 fabric_port  = 3;
//  optional int32 __unused = 4;
  optional Roles roles = 5;
  optional int64 startTime = 101;
  optional string provision_id = 102;
  // direct memory capacity in bytes
  optional int64 max_direct_memory = 103;
  // available number of cores per executor
  optional int32 available_cores = 104;
}

message DremioServiceInstance {
  optional string id = 1;
  optional int64 registrationTimeUTC = 2;
  optional NodeEndpoint endpoint = 3;
  optional string name = 4;
}

message Roles {
	optional bool sql_query = 1 [default = true];
	optional bool logical_plan = 2 [default = true];
	optional bool physical_plan = 3 [default = true];
	optional bool java_executor = 4 [default = true];
	optional bool distributed_cache = 5 [default = true];
}
